--- a/WeatherForecast/Podfile
+++ b/WeatherForecast/Podfile
@@ -1,9 +1,10 @@
 # Uncomment this line to define a global platform for your project
 # platform :ios, '8.0'
 # Uncomment this line if you're using Swift
-# use_frameworks!
+use_frameworks!
 
 target 'WeatherForecast' do
 pod 'GoogleMaps'
+pod 'PKHUD’, :git => ‘https://github.com/pkluz/PKHUD.git’
 end
 
